# hotel-mapping

./: .env  .gitignore  ARCHITECTURE.md  DELTA_LAKE_REFERENCE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.airflow.new  Dockerfile.spark  Makefile  PROJECT_SUMMARY.md  QUICKREF.md  README.md  SPARK_CLUSTER_SETUP.md  TROUBLESHOOTING.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run_20260311_235107.md  setup.sh  validate.py
config/: setup_connections.py
dags/cluster/: hotel_entity_resolution_dag.py  new_hotel_entity_resolution_dag.py  read_hotel_pairs_dag.py  validate_entity_resolution_dag.py
dags/e2e/: e2e_pipeline.py
dags/mapper/: map_raw_json_country_and_supplier.py  supplier_scorer.py
dags/test/: test_01_data_ingestion_dag.py  test_02_delta_transformation_dag.py
data/: hotel_bookings_raw.csv
docs/: CLUSTERING.md  JSON_TO_PARQUET_DAG.md  SCORING_LOGIC.md  clustering.md
hooks/: pre-commit
k8s/: seaweedfs-ingress.yaml  spark-application.yaml  spark-rbac.yaml  spark-serviceaccount.yaml
notebooks/: Clause-Optimizer-Search.py  Multi-Resolution-Greedy-Search.py  analyze_hotel_pairs.ipynb  cluster_analysis.ipynb  download_json_files.ipynb  evaluate_where_clause.py  explore_mapped_data.ipynb  export_pairs_to_csv.ipynb  mapped-unmapped-analysis.ipynb  new_cluster_analysis.ipynb  notebook_setup.py  overall_pair_score_analysis.ipynb  pair_insights.ipynb
scripts/: airflow-entrypoint.sh  rename_delta_path.py  source_downloader.py  upload_sample_json.py
spark/conf/: spark-defaults.conf
spark/jobs/: my.ipynb  new_cluster_analysis.ipynb
spark/jobs/cluster/: engine.py  entity_resolution_job.py  entity_resolution_pipeline.py  flexible_clustering.py  pair_scorer.py  print_schemas.py  read_hotel_pairs.py  similarity_scoring_job.py  strategies.py  validate_entity_resolution.py
spark/jobs/ingestion/: preprocessing_pipeline.py  run_ingestion_job.py  run_scoring_job.py
spark/jobs/mapper/: map_json_to_parquet.py
spark/test/jobs/: test_delta_merge.py  test_delta_time_travel.py  test_delta_transform.py  test_map_json_to_parquet.py
src/hotel_data/config/: config.yaml  paths.py  (+2 more)
tests/unit/: test_conflict_detection.py  test_orchestrator.py  test_scoring_service.py
(+93 files in other folders)
