[tool.poetry]
name = "hotel_data"
version = "0.1.0"
description = "Hotel Data Preprocessing"
authors = ["Akshay <akshaya@inuxu.media>"]
packages = [{ include = "hotel_data", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
pyspark = "4.0.1"
delta-spark = "4.0.0"
pandas = ">=2.3.3,<3.0.0"
typing-extensions = ">=4.15.0,<5.0.0"
pyarrow = ">=21.0.0,<22.0.0"
tabulate = ">=0.9.0,<0.10.0"
h3 = ">=4.3.1,<5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
